Yeni Sayfalar Eklendi

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +15,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Profil_DuzenleACT"></activity>
+        <activity android:name=".CinsiyetDuzenleActivity" />
+        <activity android:name=".SettingsDetailActivity" />
+        <activity android:name=".DogumTarihiActivity" />
+        <activity android:name=".Profil_DuzenleACT" />
         <activity android:name=".PostEklemeACt" />
         <activity
             android:name=".SplashAct"
@@ -27,8 +29,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
